# spicy

./: .dockerignore  .eslintignore  .eslintrc.js  .eslintrc.json  .flowconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .prettierignore  .rules  App.js  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  app.json  biome.jsonc  bun.lockb  clean.sh  index.js  package.json  pnpm-lock.yaml  start.sh  tsconfig.json  tsfmt.json
.claude/: ORCHESTRATION-GUIDE.md  README.md  settings.json  settings.local.json
.github/: dependabot.yml
.husky/: pre-commit  pre-push
.llm-rules/: architecture.md  coding.md  general.md  jazz.md
.well-known/: README.md  apple-app-site-association  assetlinks.json
.zed/: settings.json
android/: build.gradle  gradle.properties  settings.gradle
api/: .env.local  .env.production  .gitignore  .prettierrc.js  README.md  archive.sh  bun.lockb  ecosystem.config.yaml  package.json
app/: .eslintrc.json  .prettierrc.js  App.js  metro.config.js  package.json
docs/: change-score-schema.md  import-games-plan.md  scoring-engine-followup.md  scoring-engine.md  scoring-v0.3-to-v0.5.md
e2e/: fivepoints.spec.js  login.spec.js  tenpoints.spec.js  testsuite1.spec.js
ghin/: .gitignore  Cargo.toml  build.rs
ghin/proto/: handicap.proto
ghin/src/: ghin.rs  main.rs  playing_handicaps.rs  settings.rs  token.rs
ghin/src/ghin/: ghin.rs
ios/: File.swift  Podfile
lib/: README.md  bun.lockb  package.json
patches/: jazz-tools@0.20.9.patch  react-native-element-dropdown@2.12.4.patch  react-native-fast-encoder@0.3.1.patch  (+3 more)
src/: _ids
(+768 files in other folders)
