
[package]
name = "ghin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-recursion = "1.0.0"
async-trait =      { version = "0.1.56", default-features = false }
config = "0.13.1"
env_logger = "0.10.0"
futures-util = "0.3.28"
log = "0.4.17"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }
tonic = "0.10.0"
tonic-reflection = "0.10.0"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
prost = "0.12.1"

[build-dependencies]
tonic-build = "0.10.0"
